--- a/frontend/src/Profile.css
+++ b/frontend/src/Profile.css
@@ -5,3 +5,11 @@
 .margin {
     margin-right: 20px;
 }
+
+.longtextbox {
+    width: 400px;
+    height: 25px;
+    border-color: gray;
+    border-width: 2px;
+    border-radius: 5px;
+}
